--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+sdformat10 (10.3.0-1~bionic) bionic; urgency=medium
+
+  * sdformat10 10.3.0-1 release
+
+ -- Louise Poubel <louise@openrobotics.org>  Thu, 18 Feb 2021 11:52:24 -0800
+
 sdformat10 (10.2.0-1~bionic) bionic; urgency=medium
 
   * sdformat10 10.2.0-1 release
