--- a/debian/buster/debian/changelog
+++ b/debian/buster/debian/changelog
@@ -1,3 +1,9 @@
+sdformat10 (10.6.0-1~buster) buster; urgency=medium
+
+  * sdformat10 10.6.0-1 release
+
+ -- Louise Poubel <louise@openrobotics.org>  Wed, 08 Sep 2021 18:06:02 -0700
+
 sdformat10 (10.5.0-1~buster) buster; urgency=medium
 
   * sdformat10 10.5.0-1 release
