--- a/debian/buster/debian/changelog
+++ b/debian/buster/debian/changelog
@@ -1,3 +1,9 @@
+sdformat10 (10.7.0~pre1-1~buster) buster; urgency=medium
+
+  * sdformat10 10.7.0~pre1-1 release
+
+ -- Steve Peters <scpeters@openrobotics.org>  Wed, 22 Dec 2021 22:00:37 -0800
+
 sdformat10 (10.6.0-1~buster) buster; urgency=medium
 
   * sdformat10 10.6.0-1 release
