--- a/focal/debian/changelog
+++ b/focal/debian/changelog
@@ -1,3 +1,9 @@
+sdformat10 (10.7.0~pre2-1~focal) focal; urgency=medium
+
+  * sdformat10 10.7.0~pre2-1 release
+
+ -- Steve Peters <scpeters@openrobotics.org>  Mon, 27 Dec 2021 09:12:54 -0800
+
 sdformat10 (10.7.0~pre1-1~focal) focal; urgency=medium
 
   * sdformat10 10.7.0~pre1-1 release
