--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+sdformat10 (10.7.0-1~bionic) bionic; urgency=medium
+
+  * sdformat10 10.7.0-1 release
+
+ -- Steve Peters <scpeters@openrobotics.org>  Mon, 27 Dec 2021 13:17:40 -0800
+
 sdformat10 (10.7.0~pre2-1~bionic) bionic; urgency=medium
 
   * sdformat10 10.7.0~pre2-1 release
